--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorNaranja">#f9a127</color>
     <color name="colorBlanco">#ffffff</color>
-    <color name="colorGray">#ffffff</color>
+    <color name="colorGray">#cac5c5</color>
 
 
 </resources>
